<resources>
    <string name="app_name">Pokemon API</string>
    <string name="correo">Correo:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="olvide_mi_contrase_a">olvide mi contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate_aqui">Registrate aqui</string>
    <string name="olvidaste_tu_contrase_a">¿olvidaste tu contraseña?</string>
    <string name="nombre">Nombre:</string>
    <string name="codigo_de_validacion">Codigo de validacion:</string>
    <string name="validar">Validar</string>
    <string name="validacion_de_cuenta">Validacion de cuenta</string>
    <string name="tu_token_es">Tu token es:</string>
    <string name="hola_bienvenido">Hola Bienvenido</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="ver_personajes">Ver Personajes</string>
    <string name="mostrar_pokemon">Mostrar Pokemon</string>
    <string name="ver_pokemones">Ver pokemones</string>
</resources>